# gym-ignition

./: .gitignore  README.md  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: cicd.yml  conda.yml
cpp/scenario/plugins/Physics/: Physics.cc
examples/python/: launch_cartpole.py
gym-ignition-models/: setup.py
gym-ignition-models/gym_ignition_models/panda/: panda.urdf
gym_ignition/: CMakeLists.txt  setup.py
gym_ignition/gym_ignition/: __init__.py
gym_ignition/gym_ignition/algo/: __init__.py
gym_ignition/gym_ignition/algo/ppo/: __init__.py  module.py  storage.py
gym_ignition/gym_ignition/env/: GymIgnitionEnv.hpp  GymIgnitionVecEnv.py  VectorizedEnvironment.hpp  gym_ignition.cpp
gym_ignition/gym_ignition/env/env/panda/: Environment.hpp  __init__.py
gym_ignition/gym_ignition/env/env/panda/rsc/: cfg.yaml
gym_ignition/scripts/: train_panda.py
scenario/: README.md  pyproject.toml  setup.py
tutorial/: example.cpp
